@@ -380,8 +380,13 @@ Gtk::Menu * Win_GParted::create_format_menu()
 {
 	menu = manage( new Gtk::Menu() ) ;
 
-	for ( unsigned int t =0; t < gparted_core .get_filesystems() .size() -1 ; t++ )
+	for ( unsigned int t =0; t < gparted_core .get_filesystems() .size() ; t++ )
 	{
+		//Skip lvm2 and unknown because these are not file systems
+		if( gparted_core .get_filesystems()[ t ] .filesystem == GParted::FS_LVM2 ||
+			gparted_core .get_filesystems()[ t ] .filesystem == GParted::FS_UNKNOWN )
+			continue ;
+
 		hbox = manage( new Gtk::HBox() );
 			
 		//the colored square
