@@ -1,3 +1,12 @@
+2008-12-07  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/Utils.h,
+	  src/Dialog_Partition_New.cc,
+	  src.DialogFeatures.cc,
+	  src/GParted_Core.cc,
+	  src/Utils.cc,
+	  src/Win_GParted.cc: Added lvm2 physical volume detection.
+
 2008-12-03  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Dialog_Partition_Info.cc,
